Relational Retail with registering

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -17,10 +17,27 @@ html, body {
 #top-banner form label {
 	margin-left: 16px;
 }
+#user-form-link {
+	float:right;
+}
 #content {
 	padding: 8px;
 	text-align: center;
 }
+
+#category-select{
+	width: 85%;
+	margin: 0 auto;
+	padding: 10px 0 20px 0;
+	border: 1px solid #888;
+	background: #eee;
+}
+#category-select li{
+	float: left;
+	display: inline;
+	margin: 0 10px 0 0;
+}
+
 .product-card {
 	display: inline-block;
 	width: 200px;
@@ -37,6 +54,8 @@ html, body {
 .product-card h5 {
 	margin: 4px;
 	font-size: 1.2rem;
+	white-space: nowrap;
+	overflow: hidden;
 }
 .product-card p {
 	margin: 0;
